Colaboratory를 통해 생성됨

--- a/스터디1주차.ipynb
+++ b/스터디1주차.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO8aYGF15IOzbmJrmxdZwoG",
+      "authorship_tag": "ABX9TyOAqOM/UUkbwJ2h9mwjQ+Ft",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -785,7 +785,7 @@
     {
       "cell_type": "code",
       "source": [
-        "22421#16번\n",
+        "#16번\n",
         "\n",
         "n = int(input())\n",
         "x = []\n",
@@ -802,27 +802,38 @@
         "  temp_y.sort()\n",
         "  mid_x = len(temp_x)//2 if len(temp_x)%2 !=0 else len(temp_x)//2 -1\n",
         "  mid_y = len(temp_y)//2 if len(temp_y)%2 != 0 else len(temp_y)//2 -1\n",
-        "  \n",
+        "  if mid_x < 0:\n",
+        "    mid_x = 0\n",
+        "  if mid_y < 0:\n",
+        "    mid_y = 0\n",
         "  return temp_x[mid_x],temp_y[mid_y]\n",
         "\n",
         "def get_value(x,y,mid_x,mid_y):\n",
-        "  \n",
+        "  temp_x = x.copy()\n",
+        "  temp_y = y.copy()\n",
         "  for idx in range(len(x)):\n",
+        "\n",
         "    if x[idx] >= mid_x:\n",
-        "      x[idx] = x[idx] - mid_x\n",
+        "      \n",
+        "      temp_x[idx] = x[idx] - mid_x\n",
         "    else:\n",
-        "      x[idx] = mid_x - x[idx]\n",
+        "      temp_x[idx] = mid_x - x[idx]\n",
         "  for idx in range(len(y)):\n",
         "    if y[idx] >= mid_y:\n",
-        "      y[idx] = y[idx] - mid_y\n",
+        "      temp_y[idx] = y[idx] - mid_y\n",
         "    else:\n",
-        "      y[idx] = mid_y - y[idx]\n",
+        "      temp_y[idx] = mid_y - y[idx]\n",
         "  \n",
-        "  return x,y\n",
+        "  return temp_x,temp_y\n",
         "\n",
         "def sol(x,y):\n",
         "  answer = []\n",
-        "  for ele in range(len(x)):\n",
+        "  x_long = len(x)\n",
+        "  for ele in range(x_long):\n",
+        "    if ele == x_long -1 :\n",
+        "      answer.append(0)\n",
+        "      #print(f\"return = {answer}\")\n",
+        "      return answer\n",
         "    x_mid,y_mid = get_mid(x,y)\n",
         "    temp_x,temp_y = get_value(x,y,x_mid,y_mid)\n",
         "\n",
@@ -830,69 +841,77 @@
         "\n",
         "    best = 0\n",
         "    best_list = []\n",
-        "    for i,x_ele,y_ele in enumerate(temp_x,temp_y):\n",
+        "    #print(f\"x,temp_x = {x,temp_x}, y,temp_y = {y,temp_y} answer = {answer} \")\n",
+        "    for x_ele,y_ele in zip(temp_x,temp_y):\n",
         "      if best <= x_ele + y_ele:\n",
         "        best = x_ele + y_ele\n",
-        "    for i,x_ele,y_ele in enumerate(temp_x,temp_y):\n",
+        "    i = 0\n",
+        "    for x_ele,y_ele in zip(temp_x,temp_y):\n",
         "      if best == x_ele + y_ele:\n",
         "        best_list.append(i)\n",
+        "      i += 1\n",
         "    best = 0\n",
+        "    check_temp_x = x.copy()\n",
+        "    check_temp_y = y.copy()\n",
+        "    fast_idx =0\n",
+        "    fast = 100000000\n",
         "    for check in best_list:\n",
+        "      \n",
         "      temp_x = x.copy()\n",
         "      temp_y = y.copy()\n",
         "      temp_x.pop(check)\n",
         "      temp_y.pop(check)\n",
         "      x_mid,y_mid = get_mid(temp_x,temp_y)\n",
         "      temp_x1,temp_y1 = get_value(temp_x,temp_y,x_mid,y_mid)\n",
+        "      if fast >= sum(temp_x1)+sum(temp_y1):\n",
+        "        fast = sum(temp_x1) -sum(temp_y1)\n",
+        "        fast_idx = check \n",
+        "\n",
         "    best_idx=0\n",
-        "    for i,x_ele,y_ele in enumerate(temp_x1,temp_y1):\n",
+        "    i = 0\n",
+        "    best_x = 0\n",
+        "    best_y = 0\n",
+        "    for x_ele,y_ele in zip(temp_x1,temp_y1):\n",
         "      if best < x_ele + y_ele:\n",
         "        best = x_ele + y_ele\n",
-        "        best_idx = i\n",
-        "    x.pop(best_idx)\n",
-        "    y.pop(best_idx)\n",
-        "    print(answer)\n",
+        "        best_x = x_ele\n",
+        "        best_y = y_ele\n",
+        "      i += 1\n",
+        "    #print(f\"best_x = {best_x,best_y} x,temp_x1 ={x,temp_x} y,temp_y1 ={y,temp_y} \")\n",
+        "    x.pop(fast_idx)\n",
+        "    y.pop(fast_idx)\n",
+        "    #print(answer)\n",
         "\n",
         "\n",
         "     \n",
         "\n",
         "\n",
+        "answer_list = sol(x,y)[::-1]\n",
+        "for a in answer_list:\n",
+        "  print(a,end = \" \")\n",
         "\n",
-        "print(sol(x,y))\n",
         "\n",
-        "  \n",
         "  "
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 451
+          "base_uri": "https://localhost:8080/"
         },
         "id": "haX1N78PLP4l",
-        "outputId": "846959a6-5612-40af-d8e6-dab28892f856"
+        "outputId": "73f8d4dd-f1b2-4d7c-ffdb-7de4210f91e3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "3\n",
-            "2 1\n",
-            "3 5\n",
-            "1 5\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-50544a2cec3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-2-50544a2cec3e>\u001b[0m in \u001b[0;36msol\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mbest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0mbest_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_ele\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_ele\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_x\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtemp_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mbest\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mx_ele\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my_ele\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mbest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_ele\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my_ele\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+            "4\n",
+            "1 5\n",
+            "2 4\n",
+            "6 6\n",
+            "10 2\n",
+            "0 2 7 18 "
           ]
         }
       ]
